--- a/src/AbdusCo.Matbaa/appsettings.json
+++ b/src/AbdusCo.Matbaa/appsettings.json
@@ -7,8 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "Browserless": {
-    "ApiBaseUrl": "http://localhost:4110/",
-    "Token": "hehe"
+  "Puppeteer": {
+    "BrowserWsEndpoint": "ws://localhost:"
   }
 }
