refactor: Move OpenAPI info to appsettings

--- a/src/AbdusCo.Matbaa/appsettings.json
+++ b/src/AbdusCo.Matbaa/appsettings.json
@@ -9,5 +9,14 @@
   "AllowedHosts": "*",
   "Puppeteer": {
     "BrowserWsEndpoint": "ws://localhost:"
+  },
+  "OpenApi": {
+    "Title": "Matbaa",
+    "Version": "v1",
+    "Description": "Matbaa is a mini API that provides an easy-to-use interface over Puppeteer to generate PDFs from HTML",
+    "Contact": {
+      "Name": "Abdussamet Kocak",
+      "Url": "https://github.com/abdusco/matbaa"
+    }
   }
 }
